# hid-remapper

./: Cargo.toml  build.rs
.cargo/: config.toml
hw/: ProPrj_hid-remapper-v2_2026-05-31.epro
src/: main.rs
